Container fault injection

--- a/custom_log.properties
+++ b/custom_log.properties
@@ -4,7 +4,7 @@ LogCloudSimClock=true
 LogReadableSimClock=true
 LogRealTimeClock=true
 ## Format messages - getLevel;getMessage;getSourceClassName;getSourceMethodName; 
-#LogFormat=getLevel;getMessage
-LogFormat=getMessage
+LogFormat=getLevel;getMessage
+#LogFormat=getMessage
 ShutStandardLogger=true
 BufferSize=-1000
